# DGB-Quantum-Shield-Orchestrator

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  live-shield-integration.yml  shield-v4-real-oqs.yml
docs/: CONTRIBUTING.md  FAQ.md  Layer_Interfaces_v2.md
docs/legacy/: Shield_Architecture_v2.md  Shield_Orchestrator_Design_v2.md  (+1 more)
docs/v3/: API.md  (+9 more)
tests/: test_full_pipeline_basic.py  test_step12_1_live_integration_skip_guard.py  test_step8_3_coverage_regression_lock.py  test_step8_orchestrator_component_receipt_wiring.py  test_v3_2_orchestrator_receipt_lock.py  test_v3_determinism.py  test_v3_fail_closed_missing_components.py  test_v3_full_coverage_lock.py  test_v3_invalid_request_and_hashing.py  test_v48g_real_backend_interface_contract_integration.py  test_v48g_real_oqs_mldsa_backend.py  test_v48h_e_full_hybrid_integration_lock.py  test_v48h_e_oqs_falcon_backend.py  test_v48h_e_real_oqs_falcon_backend.py  test_v48h_fn_dsa_policy_contract.py  test_v48h_fn_dsa_signed_message_kat.py  test_v49f_qid_crypto_alignment_lock.py  test_v4_canonical_json_lock.py  test_v4_component_verdict_verification.py  test_v4_crypto_negative_matrix.py  test_v4_full_multi_repo_integration_harness.py  test_v4_full_multi_repo_negative_matrix.py  test_v4_key_registry_fail_closed.py  test_v4_oqs_mldsa_backend.py  test_v4_orchestrator_signed_component_flow.py  test_v4_real_backend_integration_hardening.py  test_v4_real_crypto_backend_contract.py  test_v4_receipt_schema_lock.py  test_v4_signature_bundle_contract.py
(+45 files in other folders)
